--- a/AndroidJava/app/src/main/res/values/strings.xml
+++ b/AndroidJava/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="or_sign_up_with">Or Sign Up With</string>
     <string name="Login">Login</string>
     <string name="or_login_with">Or Login with</string>
+    <string name="categories">Categories</string>
+    <string name="countries">Countries</string>
+    <string name="daily_inspiration">Daily Inspiration</string>
+    <string name="dishes">Dishes</string>
 </resources>
