--- a/AndroidJava/app/src/main/res/values/strings.xml
+++ b/AndroidJava/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
     <string name="countries">Countries</string>
     <string name="daily_inspiration">Daily Inspiration</string>
     <string name="dishes">Dishes</string>
+    <string name="ingredients">Ingredients:</string>
+    <string name="steps">Steps:</string>
+    <string name="description">Description</string>
 </resources>
